--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="title_task">Tasks</string>
     <string name="title_note">Notes</string>
 
+    <string name="add_button_task">Add New Task</string>
+    <string name="add_button_note">Add New Note</string>
+
 </resources>
