--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,16 @@
 
     <string name="title_task">Tasks</string>
     <string name="title_note">Notes</string>
+    <string name="title_save">Save</string>
 
     <string name="add_button_task">Add New Task</string>
     <string name="add_button_note">Add New Note</string>
+
+    <string name="hint_add_todo">Add new todo &#8230;</string>
+    <string name="hint_add_task">Add new task &#8230;</string>
+    <string name="hint_add_hote">Add new note &#8230;</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
