--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="hint_add_task">Add new task &#8230;</string>
     <string name="hint_add_hote">Add new note &#8230;</string>
 
+    <string name="toast_error_save">Error! Could not save!</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
