--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     <string name="hint_add_todo">Add new todo &#8230;</string>
     <string name="hint_add_task">Add new task &#8230;</string>
-    <string name="hint_add_hote">Add new note &#8230;</string>
+    <string name="hint_add_note">Add new note &#8230;</string>
 
     <string name="toast_error_save">Error! Could not save!</string>
 
